--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,24 @@
 services:
-  springboot:
-    image: dockerhandson/spring-boot-mongo:latest
-    restart: always # This will be ignored if we deploy in docker swarm
-    environment:
-    - MONGO_DB_HOSTNAME=mongo
-    - MONGO_DB_USERNAME=devdb
-    - MONGO_DB_PASSWORD=devdb123
+  springapp:
+    image: ksunil/springbootapp:latest
     ports:
       - 8080:8080
-    working_dir: /opt/app
-    depends_on:
-      - mongo
     networks:
-    - springappnetwork  
-    deploy:  # This will be considered only in docker swarm.
-      replicas: 2
-      update_config:
-        parallelism: 1
-        delay: 20s
-      restart_policy:
-        condition: on-failure
-        delay: 10s
-        max_attempts: 5
-
-  mongo:
-    image: mongo
+      - custombridge
     environment:
-    - MONGO_INITDB_ROOT_USERNAME=devdb
-    - MONGO_INITDB_ROOT_PASSWORD=devdb123
-    volumes:
-      - mongodb:/data/db
-    restart: always
+      - MONGO_DB_HOSTNAME=mongo
+      - MONGO_DB_USERNAME=sunil
+      - MONGO_DB_PASSWORD=sunil@123
+  mongo:
+    image: ksunil/mongodb:1
     networks:
-    - springappnetwork
-    
-volumes:
-  mongodb:
-    driver: local
-    
+      - custombridge
+    environment:
+     - MONGO_INITDB_ROOT_USERNAME=sunil
+     - MONGO_INITDB_ROOT_PASSWORD=sunil@123
 networks:
-  springappnetwork:
-    driver: overlay
+  custombridge:
+    driver: bridge
+volumes:
+    mongodata:
+      driver: local
